--- a/index.html
+++ b/index.html
@@ -132,7 +132,34 @@
       </div>
 
       <div class="contact">
-        <div class="search">Search form</div>
+        <div class="contact__search">
+          <form action="">
+            <div class="form__group">
+              <div class="form__input">
+                <input
+                  type="search"
+                  name="search"
+                  id="search"
+                  placeholder="Search"
+                />
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  fill="none"
+                  viewBox="0 0 24 24"
+                  stroke-width="1.5"
+                  stroke="currentColor"
+                  class="input-icon"
+                >
+                  <path
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    d="m21 21-5.197-5.197m0 0A7.5 7.5 0 1 0 5.196 5.196a7.5 7.5 0 0 0 10.607 10.607Z"
+                  />
+                </svg>
+              </div>
+            </div>
+          </form>
+        </div>
         <div class="contact__item">
           <div class="follower">
             <figure>
