feat: add follower section to contact item

--- a/index.html
+++ b/index.html
@@ -160,20 +160,65 @@
             </div>
           </form>
         </div>
+
         <div class="contact__item">
+          <div class="heading">Followers</div>
+
           <div class="follower">
             <figure>
-              <img src="" alt="follower display photo" />
+              <img
+                src="./public/assets/imgs/no-photo.png"
+                alt="display photo"
+              />
+              <div class="follower__item">
+                <div class="follower__name">John Doe</div>
+                <div class="follower__message">Lorem ipsum dolor sit amet.</div>
+              </div>
             </figure>
 
             <div>
-              <div class="follower__name">John Doe</div>
-              <div class="follower_message">Lorem ipsum dolor sit amet.</div>
+              <div class="follower__datetime">Today, 11:45am</div>
+              <div class="follower__counter">
+                <div class="follower__counter--value">5</div>
+              </div>
             </div>
+          </div>
+          <div class="follower">
+            <figure>
+              <img
+                src="./public/assets/imgs/no-photo.png"
+                alt="display photo"
+              />
+              <div class="follower__item">
+                <div class="follower__name">John Doe</div>
+                <div class="follower__message">Lorem ipsum dolor sit amet.</div>
+              </div>
+            </figure>
 
-            <div>
-              <div class="message__datetime">Today, 11:45am</div>
-              <div class="message__counter">5</div>
+            <div class="follower__item">
+              <div class="follower__datetime">Today, 11:45am</div>
+              <div class="follower__counter">
+                <div class="follower__counter--value">5</div>
+              </div>
+            </div>
+          </div>
+          <div class="follower">
+            <figure>
+              <img
+                src="./public/assets/imgs/no-photo.png"
+                alt="display photo"
+              />
+              <div class="follower__item">
+                <div class="follower__name">John Doe</div>
+                <div class="follower__message">Lorem ipsum dolor sit amet.</div>
+              </div>
+            </figure>
+
+            <div class="follower__item">
+              <div class="follower__datetime">Today, 11:45am</div>
+              <div class="follower__counter">
+                <div class="follower__counter--value">25</div>
+              </div>
             </div>
           </div>
         </div>
