feat: add minor adjustments to contact section

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </div>
         <ul>
           <li>
-            <a class="active" href="">
+            <a href="">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
                 fill="none"
@@ -176,7 +176,7 @@
               </div>
             </figure>
 
-            <div>
+            <div class="follower__item">
               <div class="follower__datetime">Today, 11:45am</div>
               <div class="follower__counter">
                 <div class="follower__counter--value">5</div>
