feat: style contact item section scrollbar

--- a/index.html
+++ b/index.html
@@ -221,6 +221,63 @@
               </div>
             </div>
           </div>
+          <div class="follower">
+            <figure>
+              <img
+                src="./public/assets/imgs/no-photo.png"
+                alt="display photo"
+              />
+              <div class="follower__item">
+                <div class="follower__name">John Doe</div>
+                <div class="follower__message">Lorem ipsum dolor sit amet.</div>
+              </div>
+            </figure>
+
+            <div class="follower__item">
+              <div class="follower__datetime">Today, 11:45am</div>
+              <div class="follower__counter">
+                <div class="follower__counter--value">25</div>
+              </div>
+            </div>
+          </div>
+          <div class="follower">
+            <figure>
+              <img
+                src="./public/assets/imgs/no-photo.png"
+                alt="display photo"
+              />
+              <div class="follower__item">
+                <div class="follower__name">John Doe</div>
+                <div class="follower__message">Lorem ipsum dolor sit amet.</div>
+              </div>
+            </figure>
+
+            <div class="follower__item">
+              <div class="follower__datetime">Today, 11:45am</div>
+              <div class="follower__counter">
+                <div class="follower__counter--value">25</div>
+              </div>
+            </div>
+          </div>
+          <div class="follower">
+            <figure>
+              <img
+                src="./public/assets/imgs/no-photo.png"
+                alt="display photo"
+              />
+              <div class="follower__item">
+                <div class="follower__name">John Doe</div>
+                <div class="follower__message">Lorem ipsum dolor sit amet.</div>
+              </div>
+            </figure>
+
+            <div class="follower__item">
+              <div class="follower__datetime">Today, 11:45am</div>
+              <div class="follower__counter">
+                <div class="follower__counter--value">25</div>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
 
