--- a/index.html
+++ b/index.html
@@ -282,14 +282,78 @@
       </div>
 
       <div class="message">
-        <form action="">
-          <div class="input">
-            <textarea name="message" id="message">
-Type your message here...</textarea
+        <div class="follower">
+          <figure class="recipient">
+            <img src="./public/assets/imgs/no-photo.png" alt="display photo" />
+            <div class="follower__item">
+              <div class="follower__name">John Doe</div>
+              <div class="follower__message">Lorem ipsum dolor sit amet.</div>
+            </div>
+          </figure>
+          <div class="message__menu">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              fill="none"
+              viewBox="0 0 24 24"
+              stroke-width="1.5"
+              stroke="currentColor"
+              class="icon"
             >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                d="M3.75 6.75h16.5M3.75 12h16.5M12 17.25h8.25"
+              />
+            </svg>
+          </div>
+        </div>
+        <form action="">
+          <div class="form__group">
+            <div class="form__input">
+              <textarea
+                name="message"
+                class="textarea chat"
+                id="message"
+                placeholder="Type your message here..."
+              ></textarea>
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                fill="none"
+                viewBox="0 0 24 24"
+                stroke-width="1.5"
+                stroke="currentColor"
+                class="input-icon"
+              >
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  d="m16.862 4.487 1.687-1.688a1.875 1.875 0 1 1 2.652 2.652L10.582 16.07a4.5 4.5 0 0 1-1.897 1.13L6 18l.8-2.685a4.5 4.5 0 0 1 1.13-1.897l8.932-8.931Zm0 0L19.5 7.125M18 14v4.75A2.25 2.25 0 0 1 15.75 21H5.25A2.25 2.25 0 0 1 3 18.75V8.25A2.25 2.25 0 0 1 5.25 6H10"
+                />
+              </svg>
+            </div>
           </div>
 
-          <input type="file" name="file" id="file" />
+          <div class="form__group">
+            <label for="file" class="form__label">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                fill="none"
+                viewBox="0 0 24 24"
+                stroke-width="1.5"
+                stroke="currentColor"
+                class="input-icon"
+              >
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  d="m18.375 12.739-7.693 7.693a4.5 4.5 0 0 1-6.364-6.364l10.94-10.94A3 3 0 1 1 19.5 7.372L8.552 18.32m.009-.01-.01.01m5.699-9.941-7.81 7.81a1.5 1.5 0 0 0 2.112 2.13"
+                />
+              </svg>
+            </label>
+            <div class="form__input">
+              <input type="file" name="file" id="file" />
+            </div>
+          </div>
         </form>
       </div>
     </main>
