feat: add header and footer sections to contact section

--- a/index.html
+++ b/index.html
@@ -161,9 +161,8 @@
           </form>
         </div>
 
+        <div class="contact__heading">Followers</div>
         <div class="contact__item">
-          <div class="heading">Followers</div>
-
           <div class="follower">
             <figure>
               <img
@@ -279,6 +278,7 @@
             </div>
           </div>
         </div>
+        <div class="contact__footer"></div>
       </div>
 
       <div class="message">
