feat: add background color to send chat button

--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
           </form>
         </div>
 
-        <div class="contact__heading">Followers</div>
+        <div class="contact__header">Followers</div>
         <div class="contact__item">
           <div class="follower">
             <figure>
