--- a/direct-message.html
+++ b/direct-message.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Welcome to SocialTalk!</title>
+    <title>Direct Messages | Welcome to SocialTalk!</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -49,7 +49,7 @@
               </a>
             </li>
             <li>
-              <a href="direct-message.html">
+              <a class="active" href="">
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
                   fill="none"
@@ -166,7 +166,7 @@
             </form>
           </div>
 
-          <div class="contact__header">Hi Jane Doe!</div>
+          <div class="contact__header">Direct Messages</div>
 
           <div class="contact__item">
             <div class="follower">
@@ -333,8 +333,8 @@
             <div class="form__group">
               <div class="form__input chat">
                 <textarea
-                  class="textarea chat"
                   name="message"
+                  class="textarea chat"
                   id="message"
                   placeholder="Type your message here..."
                 ></textarea>
