--- a/message.html
+++ b/message.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Message | Welcome to SocialTalk!</title>
+    <title>Message | Scoopty!</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -18,7 +18,7 @@
     <main>
       <div id="app">
         <div class="navigation">
-          <h1 class="heading-1">SocialTalk</h1>
+          <h1 class="heading-1">Scoopty</h1>
           <div class="profile">
             <figure>
               <img
