feat: add styles to _auth.scss; add structure to auth.html content; add new adjustments to form layout and button dimensions

--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
     <main>
       <div id="app">
         <div class="navigation">
-          <h1 class="heading-1">Scoopty</h1>
+          <div class="brand">
+            <h1 class="heading-1">Scoopty</h1>
+          </div>
           <div class="profile">
             <figure>
               <img
