--- a/direct-message.html
+++ b/direct-message.html
@@ -18,17 +18,37 @@
     <main>
       <div id="app">
         <div class="navigation">
-          <h1 class="heading-1">Scoopty</h1>
+          <div class="brand">
+            <h1 class="heading-1">Scoopty</h1>
+          </div>
           <div class="profile">
             <figure>
               <img
                 src="./public/assets/imgs/no-photo.png"
                 alt="display photo"
               />
-              <figcaption>Jane Doe</figcaption>
             </figure>
           </div>
           <ul>
+            <li>
+              <a href="./">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  fill="none"
+                  viewBox="0 0 24 24"
+                  stroke-width="1.5"
+                  stroke="currentColor"
+                  class="icon"
+                >
+                  <path
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    d="M8.25 21v-4.875c0-.621.504-1.125 1.125-1.125h2.25c.621 0 1.125.504 1.125 1.125V21m0 0h4.5V3.545M12.75 21h7.5V10.75M2.25 21h1.5m18 0h-18M2.25 9l4.5-1.636M18.75 3l-1.5.545m0 6.205 3 1m1.5.5-1.5-.5M6.75 7.364V3h-3v18m3-13.636 10.5-3.819"
+                  />
+                </svg>
+                Home
+              </a>
+            </li>
             <li>
               <a href="messages.html">
                 <svg
@@ -114,7 +134,7 @@
           <div>
             <ul>
               <li>
-                <a href="login.html">
+                <a href="auth.html">
                   <svg
                     xmlns="http://www.w3.org/2000/svg"
                     fill="none"
