--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
           <div>
             <ul>
               <li>
-                <a href="login.html">
+                <a href="auth.html">
                   <svg
                     xmlns="http://www.w3.org/2000/svg"
                     fill="none"
