feat: remove follower items from index.html; standardize figure images dimension

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
               />
             </figure>
           </div>
+
           <ul>
             <li>
               <a class="active" href="./">
@@ -188,134 +189,7 @@
 
           <div class="contact__header">Hi Jane Doe!</div>
 
-          <div class="contact__item">
-            <div class="follower">
-              <figure>
-                <img
-                  src="./public/assets/imgs/no-photo.png"
-                  alt="display photo"
-                />
-                <div class="follower__item">
-                  <div class="follower__name">John Doe</div>
-                  <div class="follower__message">
-                    Lorem ipsum dolor sit amet.
-                  </div>
-                </div>
-              </figure>
-
-              <div class="follower__item">
-                <div class="follower__datetime">Today, 11:45am</div>
-                <div class="follower__counter">
-                  <div class="follower__counter--value">5</div>
-                </div>
-              </div>
-            </div>
-            <div class="follower">
-              <figure>
-                <img
-                  src="./public/assets/imgs/no-photo.png"
-                  alt="display photo"
-                />
-                <div class="follower__item">
-                  <div class="follower__name">John Doe</div>
-                  <div class="follower__message">
-                    Lorem ipsum dolor sit amet.
-                  </div>
-                </div>
-              </figure>
-
-              <div class="follower__item">
-                <div class="follower__datetime">Today, 11:45am</div>
-                <div class="follower__counter">
-                  <div class="follower__counter--value">5</div>
-                </div>
-              </div>
-            </div>
-            <div class="follower">
-              <figure>
-                <img
-                  src="./public/assets/imgs/no-photo.png"
-                  alt="display photo"
-                />
-                <div class="follower__item">
-                  <div class="follower__name">John Doe</div>
-                  <div class="follower__message">
-                    Lorem ipsum dolor sit amet.
-                  </div>
-                </div>
-              </figure>
-
-              <div class="follower__item">
-                <div class="follower__datetime">Today, 11:45am</div>
-                <div class="follower__counter">
-                  <div class="follower__counter--value">25</div>
-                </div>
-              </div>
-            </div>
-            <div class="follower">
-              <figure>
-                <img
-                  src="./public/assets/imgs/no-photo.png"
-                  alt="display photo"
-                />
-                <div class="follower__item">
-                  <div class="follower__name">John Doe</div>
-                  <div class="follower__message">
-                    Lorem ipsum dolor sit amet.
-                  </div>
-                </div>
-              </figure>
-
-              <div class="follower__item">
-                <div class="follower__datetime">Today, 11:45am</div>
-                <div class="follower__counter">
-                  <div class="follower__counter--value">25</div>
-                </div>
-              </div>
-            </div>
-            <div class="follower">
-              <figure>
-                <img
-                  src="./public/assets/imgs/no-photo.png"
-                  alt="display photo"
-                />
-                <div class="follower__item">
-                  <div class="follower__name">John Doe</div>
-                  <div class="follower__message">
-                    Lorem ipsum dolor sit amet.
-                  </div>
-                </div>
-              </figure>
-
-              <div class="follower__item">
-                <div class="follower__datetime">Today, 11:45am</div>
-                <div class="follower__counter">
-                  <div class="follower__counter--value">25</div>
-                </div>
-              </div>
-            </div>
-            <div class="follower">
-              <figure>
-                <img
-                  src="./public/assets/imgs/no-photo.png"
-                  alt="display photo"
-                />
-                <div class="follower__item">
-                  <div class="follower__name">John Doe</div>
-                  <div class="follower__message">
-                    Lorem ipsum dolor sit amet.
-                  </div>
-                </div>
-              </figure>
-
-              <div class="follower__item">
-                <div class="follower__datetime">Today, 11:45am</div>
-                <div class="follower__counter">
-                  <div class="follower__counter--value">25</div>
-                </div>
-              </div>
-            </div>
-          </div>
+          <div class="contact__item"></div>
 
           <div class="contact__footer"></div>
         </div>
