refactor: rename textarea buttons class group from chat-btns to message-btn

--- a/messages.html
+++ b/messages.html
@@ -373,7 +373,7 @@
                   />
                 </svg>
 
-                <div class="chat-btns">
+                <div class="message-btn">
                   <div class="attach-file">
                     <label for="file" class="form__label">
                       <svg
@@ -395,6 +395,7 @@
                       <input type="file" name="file" id="file" />
                     </div>
                   </div>
+
                   <div class="chat-btn">
                     <button>
                       <svg
