refactor: change message-btn class and markkup to message__btn

--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
                   />
                 </svg>
 
-                <div class="message-btn">
+                <div class="message__btn">
                   <div class="attach-file">
                     <label for="file" class="form__label">
                       <svg
