--- a/messages.html
+++ b/messages.html
@@ -349,6 +349,9 @@
               </svg>
             </div>
           </div>
+
+          <div class="message__container">message container</div>
+
           <form action="">
             <div class="form__group">
               <div class="form__input chat">
@@ -373,7 +376,7 @@
                   />
                 </svg>
 
-                <div class="message-btn">
+                <div class="message__btn">
                   <div class="attach-file">
                     <label for="file" class="form__label">
                       <svg
