--- a/message.html
+++ b/message.html
@@ -373,7 +373,7 @@
                   />
                 </svg>
 
-                <div class="message-btn">
+                <div class="message__btn">
                   <div class="attach-file">
                     <label for="file" class="form__label">
                       <svg
