feat: add user comment markup in messages.html; add comment section styles to stylesheet

--- a/messages.html
+++ b/messages.html
@@ -350,7 +350,58 @@
             </div>
           </div>
 
-          <div class="message__container">message container</div>
+          <div class="message__container">
+            <div class="message__body">
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Labore
+              veritatis, quaerat, placeat aperiam itaque optio alias voluptatem
+              perspiciatis fugit accusamus.
+            </div>
+
+            <div class="message__comment">
+              <div class="message__comment--header">Comments</div>
+
+              <div class="message__comment--body">
+                <div class="message__comment--content">
+                  <div class="message__comment--user">
+                    <figure>
+                      <img
+                        src="./public/assets/imgs/no-photo.png"
+                        alt="commenter avatar"
+                      />
+                      <figcaption class="message__comment--display-name">
+                        Commenter display name
+                      </figcaption>
+                    </figure>
+                    <div class="message__comment--datetime">Today, 11:51am</div>
+                  </div>
+                  <div class="message__comment--text">
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                    Vitae, dolorem fugit quae quaerat necessitatibus cupiditate.
+                  </div>
+                </div>
+
+                <div class="message__comment--content">
+                  <div class="message__comment--user">
+                    <figure>
+                      <img
+                        src="./public/assets/imgs/no-photo.png"
+                        alt="commenter avatar"
+                      />
+                      <figcaption class="message__comment--display-name">
+                        Commenter display name
+                      </figcaption>
+                    </figure>
+                    <div class="message__comment--datetime">Today, 11:51am</div>
+                  </div>
+                  <div class="message__comment--text">
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                    Vitae, dolorem fugit quae quaerat necessitatibus cupiditate.
+                  </div>
+                </div>
+              </div>
+              <div class="message__comment--footer"></div>
+            </div>
+          </div>
 
           <form action="">
             <div class="form__group">
